--- a/styles/style.css
+++ b/styles/style.css
@@ -2,15 +2,16 @@ body {
   background-color: black;
   margin: 0 auto;
   overflow: hidden;
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
 }
 
 .landingPage {
   background-size: auto;
   background-image: url("../images/pngegg.png");
   background-repeat: no-repeat;
-  background-position: 90%;
+  background-position: relative;
+  background-position: 800px;
   height: 700px;
   background-color: black;
   display: flex;
